--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Tanveer & Wife",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-pg-simple": "^9.0.1",
@@ -13,13 +14,14 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
+    "pdfjs-dist": "^4.0.379",
     "pg": "^8.11.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
-    "express": "^5.2.1"
   },
   "scripts": {
     "start": "node app.js",
